--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   shrink_sidemenu: ^2.0.0+2-null-safety
   iconify_flutter: ^0.0.5
   random_avatar: ^0.0.7
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
